--- a/css/discos.css
+++ b/css/discos.css
@@ -119,41 +119,35 @@ h1 {
     background-color: rgb(60, 60, 58);
 }
 /* Estilos para la header  */
-.cont
-{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 50px;
-    margin-bottom: 7    0px;
-}
 
-h2 {
-    width: auto;
-    height: 80px;
-    margin-bottom: 10px;
+ table tr:nth-child(odd) {
+    background-color: rgb(200, 190, 190);
+  }
+  
+  table tr:nth-child(even) {
+    background-color: rgb(120, 111, 111);
+  }
+
+table {
+
+    margin: 20px auto;
+    border-collapse: collapse;
+    width: 80%;
+    color : #333;
+
+  }
+th {
+    font-size: 40px;
+    border: #333 solid 2px;
+    color: black;
+    width: 200px;
+    padding: 12px;
+  }
+td {
     font-size: 30px;
-}
-
-p {
-    width: auto;
-    height: 100px;
-    font-size: 20px;
-}
-
-.box {
-    width: 500px;
-    height: 700px;
-}
-
-img {
-    margin-top: 10px;
-    width: 100%;
-    height: auto;
-    margin-top: 10px;
-    border: 1px black solid;
-    object-fit: cover;
-    z-index: 2;
-}
+    color: black;
+    width: 200px;
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+  }
