--- a/css/merch.css
+++ b/css/merch.css
@@ -1,48 +1,3 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    color:white;
-}
-
-body {
-    font-family: 'BBH+Sans+Bartle&family', sans-serif;
-}
-
-p {
-    font-family: 'BBH Sans Bogle', sans-serif;
-}   
-
-header {
-    display: block;
-}
-
-/* Make h1 a block-level element so text-align works reliably */
-h1 {
-    display: block;
-    width: 100%;
-}
-
-.nav {
-    display: flex;
-    justify-content: space-between;
-    width: auto;
-    margin: 0 auto;
-    margin-top: 20px;
-    padding-bottom: 20px
-}
-
-.logo {
-    width: 200px;
-    height: 200px;
-    margin-right: 40px;
-}
-
-#mainTitle
-{
-    font-size: 170px;
-}
-
 .logo_linc 
 {
     width: 5%;
@@ -119,41 +74,63 @@ h1 {
     background-color: rgb(60, 60, 58);
 }
 /* Estilos para la header  */
-.cont
+.merch_container 
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+.merch_item
+{
+    width: 500px;
+    height: 5%;
+    padding: 20px;
+    border: 2px solid white;
+
+}
+.img_item 
 {
     width: 100%;
-    height: auto;
+    height: 100%;
+    overflow: hidden;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 7    0px;
+    position: relative; 
 }
 
-h2 {
+.img_item:hover {
+    overflow: visible;
+    z-index: 5; 
+}
+
+.img_item img {
+    max-width: 100%;
+    max-height: 100%;
     width: auto;
-    height: 80px;
-    margin-bottom: 10px;
-    font-size: 30px;
-}
-
-p {
-    width: auto;
-    height: 100px;
-    font-size: 20px;
-}
-
-.box {
-    width: 500px;
-    height: 700px;
-}
-
-img {
-    margin-top: 10px;
-    width: 100%;
     height: auto;
-    margin-top: 10px;
-    border: 1px black solid;
-    object-fit: cover;
-    z-index: 2;
+    transition: transform 0.35s ease;
+    will-change: transform;
+    position: relative; 
+    z-index: 1;
+}
+.img_item img:hover {
+    transform: translateY(-20px) scale(1.08);
+    z-index: 10;
+}
+h3 
+{
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+}
+p 
+{
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    color: white;
 }
